# kepler

./: .clang-format  .codespellignore  .commitlintrc.yaml  .dockerignore  .docstyle.rb  .gitattributes  .gitignore  .golangci.yml  .keplerstyle.rb  .markdownlint.json  .markdownlint.yaml  .mdlrc  .pre-commit-config.yaml  .yamllint.yaml  ADOPTERS.md  ADVISORS.md  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Contributors.md  Developer.md  Dockerfile  Dockerfile.base  GOVERNANCE.md  LICENSE-APACHE  MAINTAINERS.md  Makefile  OWNERS  README.md  SECURITY.md  Tasks.json  code-of-conduct.md  codecov.yml  dummy  go.mod  go.sum  kepler-codespell.precommit-toml  redeploy.sh
.github/: dependabot.yml  pr-labeler.yml  release.yml  rpmbuild.yml
ansible/: inventory.yaml  mock_acpi_playbook.yaml  setup.yaml
bpf/: kepler.bpf.c  kepler.bpf.h  test.bpf.c
cluster-up/: README.md  cluster-down.sh  cluster-up.sh  common.sh
cmd/: exporter.go
compose/: compose.yaml
config/: builder.go  config.go  config_cpu_test.go  config_gpu_test.go  config_hwmon_test.go  config_rapl_test.go  config_test.go  level.go  level_test.go
config-local/: config.yaml
data/: README.md  cpu_model.csv  cpus.yaml  download_intel_cpu_models.sh  normalized_cpu_arch.csv  power_data.csv  power_model.csv
dev/: README.md  create_k8s_token.sh  prepare_dev_env.sh  role.yaml
docker-compose/: docker-compose.yaml
docs/: HEALTH_PROBES.md  README.md  index.md
e2e/: Dockerfile  e2e_metric_test.go  e2e_suite_test.go  healthcheck_test.go  job-k8s.yaml  restapicheck_test.go
e2e/tools/validator/: .gitignore  Makefile  README.md  acpi_validations.yaml  bm_validations.yaml  metric_validations.yaml  pyproject.toml  query.json  validations.yaml  validator-regression.yaml  validator.bm.yaml  validator.mock-acpi.yaml  validator.yaml  validator.yaml.sample
e2e/tools/validator/html/: index.html  script.js  style.css
e2e/tools/validator/scripts/: regression-stressor.sh  stressor.sh  targeted_stresser.sh
e2e/tools/validator/src/validator/: __about__.py  __init__.py  __main__.py
e2e/tools/validator/src/validator/cases/: __init__.py
e2e/tools/validator/src/validator/cli/: __init__.py  options.py
e2e/tools/validator/src/validator/config/: __init__.py
e2e/tools/validator/src/validator/prom_query_validator/: prom_query_validator.py
e2e/tools/validator/src/validator/prometheus/: __init__.py
e2e/tools/validator/src/validator/report/: __init__.py
e2e/tools/validator/src/validator/specs/: __init__.py
e2e/tools/validator/src/validator/stresser/: __init__.py  stresser.py
e2e/tools/validator/src/validator/validations/: __init__.py
e2e/tools/validator/src/verifier/: check_containers.py  check_endpoints.py  check_networks.py
e2e/tools/validator/src/verifier/utils/: docker_utils.py  exceptions.py  prom_utils.py
e2e/tools/validator/tests/validator/cases/: test_cases.py
e2e/tools/validator/tests/validator/config/: test_config.py
e2e/tools/validator/tests/validator/prometheus/: test_prometheus.py
e2e/tools/validator/tests/validator/stresser/: test_stresser.py
enhancements/: CICDv1.md  README.md  Release_workflow.md  TEMPLATE.md  ginkgov2.md  platform-validation.md
estimator/: Dockerfile  requirements.txt
grafana-dashboards/: Kepler-Exporter-Dashboard-OSS-Demo.json  Kepler-Exporter-Dashboard-openshift.json  Kepler-Exporter-PromRules.json  Kepler-Exporter.json  README.md
hack/: Dockerfile.sushy-static  baseImage.sh  bindata.sh  bpf-generate.sh  build-images.sh  build-manifest.sh  cluster-clean.sh  cluster-deploy.sh  cluster-down.sh  cluster-sync.sh  cluster-up.sh  cluster.sh  common.sh  compile-bpf.sh  compose.yaml  config.yaml  golangInstall.sh  golint.sh  grafana.sh  installBCC.sh  integration_cluster.sh  libbpf-headers.sh  redfish-production.yaml  redfish.yaml  test-integeration-ci.sh  tools.sh  utils.bash  utils.sh  verify.sh
manifests/: README.md  deployment.yaml  keplerExporter-serviceMonitor.yaml  openshift-cgroupv2-workers.yaml  openshift-deployment.yaml  openshift-kernel-devel-master.yaml  (+2 more)
(+1272 files in other folders)
